--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,20 @@ body {
 }
 
 header {
-    padding-top: 3rem;
-    padding-bottom: 3rem;
     text-align: center;
     width: 100%;
 }
 
+header img {
+    width: 5rem;
+    height: 5rem;
+    background-color: rgb(177, 174, 174);
+    border-radius: 100%;
+    margin-bottom: 1rem;
+}
+
 header h1 {
+    padding-top: 5rem;
     font-size: 3rem;
     font-weight: 400;
     letter-spacing: 1px;
@@ -51,10 +58,6 @@ header h1 {
 
 header p {
     letter-spacing: 1.5px;
-}
-
-header>* {
-    margin: 1rem;
 }
 
 .login {
@@ -108,46 +111,66 @@ form select {
 }
 
 #boton {
-    margin-top: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    padding: 1rem;
     border-radius: 5px;
-    background-color: brown;
+    background-color: rgba(5, 116, 5, 0.767);
     border: none;
     color: white;
     padding: 16px 32 px;
     font-size: 16px;
     opacity: 0.7;
     transition: 0.4s;
-    width: 8rem;
+    width: auto;
 }
 
 #boton:hover {
     cursor: 1rem auto;
     width: 95%;
+    background-color: rgb(81, 255, 0);
 }
 
-.agenda {
-    margin: 1rem auto;
-    width: 95%;
+footer {
+    padding-top: 3rem;
 }
 
-.agenda ul {
+footer a {
+    color: black;
+    text-decoration: none;
+}
+
+
+/* abre pagina course.html*/
+
+.bienvenida {
+    font-size: medium;
+    text-decoration: underline overline;
+}
+
+.course {
+    margin: 2rem;
+    width: 75%;
+    background-color: #1e66c4e8;
+    padding: 2rem;
+    border-radius: 5pt;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
+    -moz-box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
+    -o-box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
+    -webkit-box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
+}
+
+.course ul {
     list-style: none;
     margin: 0, auto;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    text-align: center;
+    text-align: start;
     letter-spacing: 1px;
 }
 
-.agenda ul>li:nth-child(1) {
-    width: 15rem;
-}
-
-.agenda ul>li:nth-child(5) {
-    width: 50rem;
-}
-
-.agenda ul li {
+.course ul li {
     border: 1px solid var(--blanco);
     width: 100%;
     padding: 2px 0;
